--- a/views/admin/configuration.ejs
+++ b/views/admin/configuration.ejs
@@ -364,6 +364,12 @@
     />
     <button type="submit">Reset Fake Date to Current Date</button>
   </form>
+  <form action="/update-special-status" method="POST" style="margin: 10px 0;">
+  <button type="submit" name="specialStatus" value="None">None</button>
+  <button type="submit" name="specialStatus" value="System Temporarily Closed">System Temporarily Closed</button>
+  <button type="submit" name="specialStatus" value="Results Are Out">Results Are Out</button>
+</form>
+
 </div>
 
 
